--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
+  fluttertoast: ^8.0.8
   flutter_screenutil:
   dots_indicator:
   intl:
   cloud_firestore:
+  firebase_auth: ^4.12.1
 
 dev_dependencies:
   flutter_test:
